# woher

./: LICENSE  README.md  dataset.ipynb  llama2_fine_tune.ipynb  model-training.ipynb  pyproject.toml
gen1/training/: woher.yaml
gen2/: llama2_data_prep.ipynb  llama2_fine_tune.ipynb
gen3/: dataset.py  playground.ipynb  train.py  wherept.py
training/: model-training.ipynb
website/: package-lock.json  package.json
website/backend/: .flaskenv
website/backend/app/: routes.py
website/src/: App.js
