[tool.poetry]
name = "woher"
version = "0.1.0"
description = ""
authors = ["Lage Ragnarsson <lage.ragnarsson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
matplotlib = "^3.8.2"
wandb = "^0.16.0"
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
