[tool.poetry]
name = "woher"
version = "0.1.0"
description = ""
authors = ["Lage Ragnarsson <lage.ragnarsson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.1"
wandb = "^0.16.0"
torchview = "^0.2.6"
pandas = "^2.1.3"
graphviz = "^0.20.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
